# cubo

./: CHANGELOG.md  README.md  cubo.cabal
app/: Check.hs  Eval.hs  Lexer.hs  Main.hs  Parser.hs  Pretty.hs  Syntax.hs
test/file_examples/: example1_axiom.cubo
